# funding-rate-bot

./: .env.sample  Cargo.toml
src/: main.rs
src/extended/: get_market_data.rs  get_open_positions.rs  mod.rs  place_order.rs  structs.rs
src/extended/account/: get_open_positions.rs  get_tradeable_balance.rs  mod.rs
src/extended/markets/: get_market_data.rs
src/extended/orders/: place_order.rs
src/pacifica/: get_market_data.rs  get_open_positions.rs  get_tradeable_balance.rs  mod.rs  place_order.rs  structs.rs
src/pacifica/account/: get_open_positions.rs  get_tradeable_balance.rs
src/pacifica/orders/: place_order.rs
src/utils/: utils.rs
