[package]
name = "funding-rate-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
reqwest = {version = "0.12.24", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0",features = ["full"]}
tokio-cron-scheduler = "0.15.1"
tokio-macros = "2.6.0"
